alldatasheets.co.kr heeft op alldatasheets.com een engelstalige versie, dat is vermoedelijk leesbaarder voor de gemiddelde inwoner van NL/BE -> aangepast.

--- a/Links - Circuits Online.html
+++ b/Links - Circuits Online.html
@@ -263,9 +263,9 @@ Site is in het Engels.<br>
       <h2>Datasheets en handleidingen</h2>
 
     <ul class="links">
-              <li><strong>Alldatasheet.co.kr</strong><br>
+              <li><strong>Alldatasheet.com</strong><br>
           Site met een hele hoop datasheets van onder andere transistoren en diodes.<br>
-          <a href="http://www.alldatasheet.co.kr/" target="_blank" rel="noopener">http://www.alldatasheet.co.kr/</a>
+          <a href="http://www.alldatasheet.com/" target="_blank" rel="noopener">http://www.alldatasheet.com/</a>
         </li>
               <li><strong>Alles over steppermotoren</strong><br>
           Uitgebreide site met alle informatie over steppermotoren<br>
