handleiding-online verwijst door naar gebruikshandleiding.com, levert nog steeds gebruikshandleidingen -> link aangepast

--- a/Links - Circuits Online.html
+++ b/Links - Circuits Online.html
@@ -301,7 +301,7 @@ U kunt zo uw oude maar kwalitatief goede en vaak mooie apparatuur repareren. <br
         </li>
               <li><strong>Handleiding-Online</strong><br>
           Hier zijn handleidingen te downloaden van ieder apparaat wat je voor kunt stellen. Je kunt ook zoekertjes plaatsen als op zoek bent naar een handleiding.<br>
-          <a href="http://www.handleiding-online.nl/" target="_blank" rel="noopener">http://www.handleiding-online.nl/</a>
+          <a href="https://www.gebruikershandleiding.com/" target="_blank" rel="noopener">https://www.gebruikershandleiding.com/</a>
         </li>
               <li><strong>National&#039;s complete application note list</strong><br>
           Bevat alle application notes ooit door National Semiconductor gepubliceerd.<br>
