Dode links in de sectie digitaal verwijderd. (server reageert niet, 404 van serviceprovide, of url hergebruikt voor iets anders)

--- a/Links - Circuits Online.html
+++ b/Links - Circuits Online.html
@@ -307,42 +307,22 @@ U kunt zo uw oude maar kwalitatief goede en vaak mooie apparatuur repareren. <br
           Site met downloadbare service manuals, datasheets en schema&#039;s van apparatuur. <br>
           <a href="http://www.eserviceinfo.com/" target="_blank" rel="noopener">http://www.eserviceinfo.com/</a>
         </li>
-          </ul>
+    git      </ul>
     
       <h2>Digitaal</h2>
 
     <ul class="links">
-              <li><strong>Automatisatie</strong><br>
-          Een Nederlandstalige website die een cursus bevat omtrent digitale technieken en het aansluiten + programmeren van een PLC. Een zeer bruikbare website voor degene die nog niet zo goed is met digitale technieken.<br>
-          <a href="http://www.st-pieter.be/~vti/_maesen_i/Processturing/Start%20processturing.htm" target="_blank" rel="noopener">http://www.st-pieter.be/~vti/_maesen_i/Processturing/Start%20processturing.htm</a>
-        </li>
               <li><strong>AVR Freaks</strong><br>
           Engelstalige website over de bekende AVR microcontroller.<br>
           <a href="http://www.avrfreaks.net/" target="_blank" rel="noopener">http://www.avrfreaks.net/</a>
-        </li>
-              <li><strong>cControl Simulatie</strong><br>
-          Ontwikkel en simulatie software voor ontwikkelen met de cControl Chip.<br>
-          <a href="http://www.ccontrol.tk" target="_blank" rel="noopener">http://www.ccontrol.tk</a>
-        </li>
-              <li><strong>Digitaal voor beginners</strong><br>
-          Digitale basisschakelingen en begrippen voor beginners. De werking van digitale poorten worden met animaties verduidelijkt.<br>
-          <a href="http://www.play-hookey.com/" target="_blank" rel="noopener">http://www.play-hookey.com/</a>
         </li>
               <li><strong>DMX tutorial</strong><br>
           DMX tutorial voor de 16F628A, zie ook http://www.circuitsonline.net/forum/view/53177/1/<br>
           <a href="http://www.renebiemans.nl/page.php?al=dmx" target="_blank" rel="noopener">http://www.renebiemans.nl/page.php?al=dmx</a>
         </li>
-              <li><strong>Microcontrollers</strong><br>
-          Site met allerhande informatie over µControllers.<br>
-          <a href="http://home.scarlet.be/~tb091759/" target="_blank" rel="noopener">http://home.scarlet.be/~tb091759/</a>
-        </li>
               <li><strong>mikroElektronika</strong><br>
           Zeer uitgebreid engelstalige site over het gebruik en toepassen van de PIC microcontroller, met veel voorbeelden!<br>
           <a href="http://www.mikroe.com/" target="_blank" rel="noopener">http://www.mikroe.com/</a>
-        </li>
-              <li><strong>RC Flightsim Joystick </strong><br>
-          RC Flightsim Joystick ontwikkeld op basis van de PIC18F4455.<br>
-          <a href="http://www.aagorter.nl/home/index.php?option=com_content&amp;task=view&amp;id=12&amp;Itemid=26" target="_blank" rel="noopener">http://www.aagorter.nl/home/index.php?option=com_content&amp;task=view&amp;id=12&amp;Itemid=26</a>
         </li>
           </ul>
   
