--- a/Links - Circuits Online.html
+++ b/Links - Circuits Online.html
@@ -251,15 +251,11 @@ Site is in het Engels.<br>
           <a href="http://www.muzique.com/" target="_blank" rel="noopener">http://www.muzique.com/</a>
         </li>
               <li><strong>MFB Freaks.com</strong><br>
-          De enige echte Philips Motional Feedback website.<br />
-<br />
- <br>
+          De enige echte Philips Motional Feedback website.<br>
           <a href="http://www.mfbfreaks.com/" target="_blank" rel="noopener">http://www.mfbfreaks.com/</a>
         </li>
           </ul>
   
-  
-    
       <h2>Datasheets en handleidingen</h2>
 
     <ul class="links">
@@ -276,8 +272,7 @@ Site is in het Engels.<br>
           <a href="http://bama.edebris.com/manuals/" target="_blank" rel="noopener">http://bama.edebris.com/manuals/</a>
         </li>
               <li><strong>Datasheet archive</strong><br>
-          Heel veel datasheets netjes op alfabet.<br />
-<br>
+          Heel veel datasheets netjes op alfabet.<br>
           <a href="http://www.datasheetarchive.com/" target="_blank" rel="noopener">http://www.datasheetarchive.com/</a>
         </li>
               <li><strong>Datasheet4u</strong><br>
@@ -294,9 +289,7 @@ Site is in het Engels.<br>
         </li>
               <li><strong>Free Service Manuals</strong><br>
           Nostatech&#039;s Free Service Manuals heeft als doel het verstrekken van gratis schema&#039;s, documentaties en service manuals.<br />
-U kunt zo uw oude maar kwalitatief goede en vaak mooie apparatuur repareren. <br />
-<br />
-<br>
+U kunt zo uw oude maar kwalitatief goede en vaak mooie apparatuur repareren. <br>
           <a href="http://freeservicemanuals.info/nl/" target="_blank" rel="noopener">http://freeservicemanuals.info/nl/</a>
         </li>
               <li><strong>Handleiding-Online</strong><br>
@@ -307,10 +300,9 @@ U kunt zo uw oude maar kwalitatief goede en vaak mooie apparatuur repareren. <br
           Site met downloadbare service manuals, datasheets en schema&#039;s van apparatuur. <br>
           <a href="http://www.eserviceinfo.com/" target="_blank" rel="noopener">http://www.eserviceinfo.com/</a>
         </li>
-    git      </ul>
+        </ul>
     
       <h2>Digitaal</h2>
-
     <ul class="links">
               <li><strong>AVR Freaks</strong><br>
           Engelstalige website over de bekende AVR microcontroller.<br>
@@ -332,8 +324,7 @@ U kunt zo uw oude maar kwalitatief goede en vaak mooie apparatuur repareren. <br
 
     <ul class="links">
               <li><strong>Club van draadje</strong><br>
-          De Club van Draadje bestaat sinds februari 2011 en is sinds maart 2012 een Stichting.<br />
-<br />
+          De Club van Draadje bestaat sinds februari 2011 en is sinds maart 2012 een Stichting.<br>
 Wij zijn een elektronica hobbyclub in de wijk Oosterhout in Nijmegen-Noord.<br>
           <a href="https://www.clubvandraadje.nl/" target="_blank" rel="noopener">https://www.clubvandraadje.nl/</a>
         </li>
@@ -346,8 +337,7 @@ Wij zijn een elektronica hobbyclub in de wijk Oosterhout in Nijmegen-Noord.<br>
           <a href="http://www.djoe.nl" target="_blank" rel="noopener">http://www.djoe.nl</a>
         </li>
               <li><strong>Elektronica4kids</strong><br>
-          Stichting Elektronica4Kids is al een aantal jaren actief in de regio Nijmegen / Arnhem voor het onderwijs.<br />
-<br />
+          Stichting Elektronica4Kids is al een aantal jaren actief in de regio Nijmegen / Arnhem voor het onderwijs.<br>
 Waaronder lessen op Scholen en op Kinderfeesten, kinderen interesseren in Elektronica en Programmeren.<br>
           <a href="https://www.elektronica4kids.nl/" target="_blank" rel="noopener">https://www.elektronica4kids.nl/</a>
         </li>
