agentschap telecom is tegenwoordig rdi, rfzone.org zit ergens in de spam-hoek

--- a/Links - Circuits Online.html
+++ b/Links - Circuits Online.html
@@ -385,7 +385,7 @@ middengolf, kortegolf piraten.<br />
         </li>
               <li><strong>Nationaal Frequentie Register</strong><br>
           Een overzicht van de gebruikte frequenties, voor omroep, telecom en verder.<br>
-          <a href="http://www.agentschap-telecom.nl/nfr/" target="_blank" rel="noopener">http://www.agentschap-telecom.nl/nfr/</a>
+          <a href="https://www.rdi.nl/onderwerpen/nationaal-frequentieplan" target="_blank" rel="noopener">https://www.rdi.nl/onderwerpen/nationaal-frequentieplan</a>
         </li>
               <li><strong>pa0ete.nl</strong><br>
           Site tal van artikelen over zendamateurisme, satellietontvangst en andere populair-wetenschappelijke onderwerpen.<br>
@@ -403,10 +403,6 @@ Het collectief bestaat uit locale belangstellenden voor elektronica in het bijzo
               <li><strong>RF Cafe</strong><br>
           Portal site naar heel veel informatie over HF. (Engels)<br>
           <a href="http://www.rfcafe.com" target="_blank" rel="noopener">http://www.rfcafe.com</a>
-        </li>
-              <li><strong>RF zone</strong><br>
-          This site is dedicated to our free RF eBook library. (Engels)<br>
-          <a href="http://www.rfzone.org/free-rf-ebooks/" target="_blank" rel="noopener">http://www.rfzone.org/free-rf-ebooks/</a>
         </li>
               <li><strong>The DX zone</strong><br>
           Ham Radio Resource Guide thousands of radio related resources to make sure you will find what you need for your DX. (Engels)<br />
