library.thinkquest.org antwoord niet, national semiconductor is tegenwoordig van Texas Instruments maar de site verwijst niet door, NXP wil per se met https anders laad de site ook niet direct goed, en technieknet.nl leest als een LLM-gegenereerde tekst die beweert alles te weten over techniek in autos en motoren, banen in de techniek, en dat techniek e-mail overbodig maakt waarbij overigens gelinkt wordt naar een inlogpagina van iets aka er wordt gevist

--- a/Links - Circuits Online.html
+++ b/Links - Circuits Online.html
@@ -410,8 +410,6 @@ Het collectief bestaat uit locale belangstellenden voor elektronica in het bijzo
           <a href="http://www.dxzone.com/" target="_blank" rel="noopener">http://www.dxzone.com/</a>
         </li>
           </ul>
-  
-  
     
       <h2>Informatief</h2>
 
@@ -436,17 +434,9 @@ Het collectief bestaat uit locale belangstellenden voor elektronica in het bijzo
           Alles wat je over de transistor wilde weten.<br>
           <a href="http://www.101science.com/transistor.htm" target="_blank" rel="noopener">http://www.101science.com/transistor.htm</a>
         </li>
-              <li><strong>Electricity Online</strong><br>
-          Site die door middel van Flash filmpjes het begrip elektriciteit duidelijk maakt.<br>
-          <a href="http://library.thinkquest.org/28032/" target="_blank" rel="noopener">http://library.thinkquest.org/28032/</a>
-        </li>
               <li><strong>Electronica Info</strong><br>
           Site met veel links naar sites over onder andere microprocessoren, elektronica software, reparatie, schakelingen en elektronica cursussen.<br>
           <a href="http://www.hobby-electronics.info" target="_blank" rel="noopener">http://www.hobby-electronics.info</a>
-        </li>
-              <li><strong>Electronics - Modern Magic</strong><br>
-          Nederlandse site die de beginselen van de elektronica duidelijk behandeld. Ook een aantal schakelingen en wat elektronicageschiedenis is niet vergeten.<br>
-          <a href="http://library.thinkquest.org/C0111209/" target="_blank" rel="noopener">http://library.thinkquest.org/C0111209/</a>
         </li>
               <li><strong>Elektronica meettechniek</strong><br>
           Een zeer interessante site over meettechniek in de elektronica. Je vind er algemene info: opstellingen, wat theorie.  Verder ook uitgebreid het meten van passieve component.  Dit alles mooi theoretisch benaderd en praktisch uitgewerkt<br />
@@ -456,10 +446,6 @@ Het collectief bestaat uit locale belangstellenden voor elektronica in het bijzo
               <li><strong>Het CNC forum</strong><br>
           Een forum voor (zelfbouw) CNC machines.<br>
           <a href="http://www.cnczone.nl/" target="_blank" rel="noopener">http://www.cnczone.nl/</a>
-        </li>
-              <li><strong>Infrarood</strong><br>
-          Engelstalig artikel waar uitleg gegeven word over infarood techniek<br>
-          <a href="http://www.hw.cz/english/docs/irda/irda.html" target="_blank" rel="noopener">http://www.hw.cz/english/docs/irda/irda.html</a>
         </li>
               <li><strong>Koperdraad tabel</strong><br>
           Omdat er veel vraag naar is, een scan van de koperdraad tabel online.&lt;br /&gt;<br />
@@ -472,13 +458,9 @@ antique glass stuff, tesla coils and high voltage, electric, laser and science s
 <br>
           <a href="http://www.electricstuff.co.uk/" target="_blank" rel="noopener">http://www.electricstuff.co.uk/</a>
         </li>
-              <li><strong>National Semiconductor</strong><br>
-          Deze bekende chipfabrikant is ook online en je kunt bijvoorbeeld datasheets van verschillende IC&#039;s downloaden.<br>
-          <a href="http://www.national.com/" target="_blank" rel="noopener">http://www.national.com/</a>
-        </li>
               <li><strong>NXP Semiconductors</strong><br>
           De pagina van de NXP Semiconductors (voormalig Philips) met info en datasheets van alle NXP IC&#039;s, transistoren, enzovoort.<br>
-          <a href="http://www.nxp.com/" target="_blank" rel="noopener">http://www.nxp.com/</a>
+          <a href="https://www.nxp.com/" target="_blank" rel="noopener">https://www.nxp.com/</a>
         </li>
               <li><strong>Philips bouwpakket handleidingen</strong><br>
           Diverse handleidingen van oude Philips bouwpakketjes.<br />
@@ -504,10 +486,6 @@ Speciaal die voor de Philips zelfbouw mengversterker<br>
               <li><strong>ST Microelectronics</strong><br>
           Ook hier zijn datasheets te downloaden. De &quot;chipbakker&quot; ST heeft onder andere de TDA2003 gemaakt.<br>
           <a href="http://www.st.com/" target="_blank" rel="noopener">http://www.st.com/</a>
-        </li>
-              <li><strong>TechniekNET</strong><br>
-          Handige startpagina voor alles wat met techniek te maken heeft.<br>
-          <a href="http://www.technieknet.nl/" target="_blank" rel="noopener">http://www.technieknet.nl/</a>
         </li>
               <li><strong>Technisch woordenboek</strong><br>
           Een site niet specifiek over elektronica, maar wel handig: een Engels-Nederlands/Nederlands-Engels technisch woordenboek.<br>
